--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <div class="todo-list">
         <h2>To Do List</h2>
         <div class="row">
-          <input type="text" id="input-box" placeholder="input your list" />
+          <input type="text" id="input-box" placeholder="list kegiatan hari ini" />
           <button onclick="addTask()">Add</button>
         </div>
-        <p class="alert">You must write something!</p>
+        <p class="alert">Masukkan list terlebih dahulu!</p>
         <ul id="list-container">
-          <!-- <li class="cek">Task 1</li>
-          <li>Task 2</li>
-          <li>Task 3</li> -->
+          <!-- <li class="oke">Task 1</li> -->
+          <!-- <li>Task 2</li> -->
+          <!-- <li>Task 3</li> -->
         </ul>
       </div>
     </div>
